# hibi

./: .dockerignore  .env.example  .gitignore  README.md  articles.json  channels.yaml  config.yaml  daily_news.py  db.py  docker-compose.yml  enriched_articles.json  fetch_articles.py  mailer.py  ranking.py  requirements.txt  schedule_prompt.md  send_mail.py  sources.yaml  summaries.json
.claude/commands/: implementation-reviewer.md  make-execution-packet.md  orchestrate.md  pr-creation.md  run-dev-loop.md  spec-architect.md  test-qa.md  triage-issue.md
.claude/rules/: dev-agent.md  spec-agent.md  test-agent.md
.claude/skills/: implementation-patterns.md  orchestrator.md  spec-architect.md  test-patterns.md
.github/workflows/: build-and-push.yml  daily-news.yml  diagnose-transcript.yml
architecture/: README.md
architecture/diagrams/: click-tracking-flow.mmd  data-model.mmd  pipeline-flow.mmd
architecture/skills/: hibi-domain.md
docs/: meeting-2026-04-15.md  setup.md
fetchers/: __init__.py  rss.py  youtube.py
migrations/: 001_init.sql  002_phase3_schema.sql  003_embedding.sql
scripts/: backfill_embeddings.py  diagnose_transcript.py  smoke_phase3_schema.py  test_neon_connection.py  verify_channels.py
service/: .dockerignore  Dockerfile  README.md  pyproject.toml
service/app/: main.py  settings.py
sources/: hackernews.py  reddit.py  rss.py
templates/: email.html
